# ticketbooth

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  fix-double-headerbar.md  investigation_report.md  io.github.void0x14.Ticketbooth.json  me.iepure.Ticketbooth.Devel.json  meson.build  meson_options.txt  pypi-dependencies.json  ticketbooth.doap
.agent/: commit_msg.txt  context.md
.agent/memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.agent/rules/: memory-bank-klasoru.md  research.md
.github/workflows/: build-x86.yaml  release.yaml
data/: io.github.void0x14.Ticketbooth.desktop.in  io.github.void0x14.Ticketbooth.gschema.xml.in  io.github.void0x14.Ticketbooth.metainfo.xml.in  me.iepure.Ticketbooth.desktop.in  me.iepure.Ticketbooth.gschema.xml.in  me.iepure.Ticketbooth.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: DEVELOPER_GUIDE.md
install/: ticketbooth-run-script.in
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemContext.md
po/: LINGUAS  POTFILES  ar.po  bg.po  de.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  hi.po  hu.po  ia.po  it.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ta.po  ticketbooth.pot  tr.po  uk.po
src/: background_queue.py  main.py  meson.build  preferences.py  shared.py  shared.py.in  ticketbooth.gresource.xml.in  ticketbooth.in  window.py
src/app_logging/: __init__.py  meson.build  session_file_handler.py
src/css/: style-dark.css  style.css
src/dialogs/: add_manual_dialog.py  add_tmdb_dialog.py  edit_season_dialog.py  meson.build
src/models/: episode_model.py  language_model.py  meson.build  movie_model.py  search_result_model.py  season_model.py  series_model.py
src/pages/: details_page.py  edit_episode_page.py  meson.build
src/providers/: local_provider.py  meson.build  tmdb_provider.py
src/ui/: about_dialog.blp  preferences.blp  window.blp
src/ui/dialogs/: add_manual.blp  add_tmdb.blp  edit_season.blp  message_dialogs.blp
src/ui/gtk/: help-overlay.blp
src/ui/pages/: details_page.blp  edit_episode_page.blp
src/ui/views/: content_view.blp  db_update_view.blp  first_run_view.blp  main_view.blp
src/ui/widgets/: background_activity_row.blp  background_indicator.blp  episode_row.blp  image_selector.blp  poster_button.blp  search_result_row.blp  season_expander.blp  theme_switcher.blp
src/views/: content_grid_view.py  content_view.py  db_update_view.py  first_run_view.py  main_view.py  meson.build
src/widgets/: background_activity_row.py  background_indicator.py  episode_row.py  image_selector.py  meson.build  poster_button.py  search_result_row.py  season_expander.py  theme_switcher.py
tests/: TEST_PLAN.md  conftest.py  test_business_logic.py  test_input_validation.py  test_persistence.py
